@@ -14,5 +14,4 @@ Todo for 0.27:
     - Get more items translatable.
     - Try out pygame.key.set_repeat()
     - Make construction that requires CPU a research option when needed.
-    - Building CPUs should tell you how much CPU you get from it.
     - Give idle bases a discovery bonus.
